--- a/WolvenKit.CLI/WolvenKit.CLI.csproj
+++ b/WolvenKit.CLI/WolvenKit.CLI.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+      <Platforms>x64</Platforms>
       <OutputType>Exe</OutputType>
       <TargetFramework>net6.0</TargetFramework>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -10,7 +11,7 @@
   </PropertyGroup>
 
     <PropertyGroup>
-        <Title>gpm</Title>
+        <Title>WolvenKit.CLI</Title>
         <Version>1.6.1</Version>
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>cp77tools</ToolCommandName>
