--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -75,6 +75,8 @@
     <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="6.0.4" />
     <PackageReference Include="AvalonEdit" Version="6.1.3.50" />
     <PackageReference Include="gpm.Installer" Version="0.2.3" />
+    <PackageReference Include="HelixToolkit.SharpDX.Assimp" Version="2.20.2" />
+    <PackageReference Include="HelixToolkit.SharpDX.Core.Wpf" Version="2.20.2" />
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="6.0.0" />
     <PackageReference Include="SharpZipLib" Version="1.3.3" />
     <PackageReference Include="Syncfusion.SfTreeView.WPF" Version="19.4.0.38" />
