--- a/WolvenKit.RED4.Save/WolvenKit.RED4.Save.csproj
+++ b/WolvenKit.RED4.Save/WolvenKit.RED4.Save.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WolvenKit.RED4.Archive\WolvenKit.RED4.Archive.csproj" />
     <ProjectReference Include="..\WolvenKit.RED4.Types\WolvenKit.RED4.Types.csproj" />
   </ItemGroup>
 
