Check build only on branch pushes and not tags

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -1,5 +1,9 @@
 name: wkit-check-builds
-on: [push, workflow_dispatch, pull_request]
+on:
+  push:
+  - branches: '*'
+  pull_request:
+  - branches: '*'
 
 jobs:
   desktop-win:
