--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -1,9 +1,9 @@
 name: wkit-check-builds
 on:
   push:
-  - branches: '*'
+    branches: '*'
   pull_request:
-  - branches: '*'
+    branches: '*'
 
 jobs:
   desktop-win:
