--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -72,16 +72,16 @@ jobs:
       uses: actions/checkout@v2
      
     # environmental variables
-    - run: echo "PROJ=./WolvenKit/WolvenKit.csproj" >> $env:GITHUB_ENV
-    - run: echo "PROJC=./WolvenKit.CLI/WolvenKit.CLI.csproj" >> $env:GITHUB_ENV
-    - run: echo "OUT=./publish/app/" >> $env:GITHUB_ENV
-    - run: echo "OUTC=./publish/console/" >> $env:GITHUB_ENV
-    - run: echo "FINALOUT=./publish" >> $env:GITHUB_ENV
-    - run: echo "NAME=WolvenKit" >> $env:GITHUB_ENV
-    - run: echo "REF=${{github.ref}}" >> $env:GITHUB_ENV
-    - run: echo "SHA=${{github.sha}}" >> $env:GITHUB_ENV
-    - run: echo "MREPO=${{github.repository}}" >> $env:GITHUB_ENV
-    - run: echo "VERSION=${{github.ref_name}}" >> $env:GITHUB_ENV
+    - run: echo "PROJ=./WolvenKit/WolvenKit.csproj" >> $GITHUB_ENV
+    - run: echo "PROJC=./WolvenKit.CLI/WolvenKit.CLI.csproj" >> $GITHUB_ENV
+    - run: echo "OUT=./publish/app/" >> $GITHUB_ENV
+    - run: echo "OUTC=./publish/console/" >> $GITHUB_ENV
+    - run: echo "FINALOUT=./publish" >> $GITHUB_ENV
+    - run: echo "NAME=WolvenKit" >> $GITHUB_ENV
+    - run: echo "REF=${{github.ref}}" >> $GITHUB_ENV
+    - run: echo "SHA=${{github.sha}}" >> $GITHUB_ENV
+    - run: echo "MREPO=${{github.repository}}" >> $GITHUB_ENV
+    - run: echo "VERSION=${{github.ref_name}}" >> $GITHUB_ENV
 
     - name: Get console version
       uses: naminodarie/get-net-sdk-project-versions-action@v1
@@ -89,7 +89,7 @@ jobs:
       with:
         proj-path: ${{env.PROJC}}
 
-    - run: echo "VERSIONC=${{steps.get-version-cli.outputs.assembly-version}}" >> $env:GITHUB_ENV
+    - run: echo "VERSIONC=${{steps.get-version-cli.outputs.assembly-version}}" >> $GITHUB_ENV
     
     - run: echo "PORTABLE=${{env.NAME}}-${{env.VERSION}}.zip" >> $GITHUB_ENV
     - run: echo "CONSOLE=${{env.NAME}}.Console-${{env.VERSIONC}}.zip" >> $GITHUB_ENV
