--- a/Tests/WolvenKit.UnitTests/WolvenKit.UnitTests.csproj
+++ b/Tests/WolvenKit.UnitTests/WolvenKit.UnitTests.csproj
@@ -98,9 +98,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WolvenKit.Core\WolvenKit.Core.csproj" />
-      <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
-      <ProjectReference Include="..\WolvenKit.RED4.TweakDB\WolvenKit.RED4.TweakDB.csproj" />
+    <ProjectReference Include="..\..\WolvenKit.Core\WolvenKit.Core.csproj" />
+      <ProjectReference Include="..\..\WolvenKit.Common\WolvenKit.Common.csproj" />
+      <ProjectReference Include="..\..\WolvenKit.RED4.TweakDB\WolvenKit.RED4.TweakDB.csproj" />
   </ItemGroup>
 
 </Project>
