--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -229,6 +229,15 @@
     <Resource Include="Resources\Media\Images\Application\wkit_logo_text_singlestack_white.png" />
     <Resource Include="Resources\Media\Images\Icons\Files\archive-closed.svg" />
     <Resource Include="Resources\Media\Images\Icons\Files\archive-opened.svg" />
+    <Resource Include="Resources\Media\Images\Icons\Files\ccstate.svg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Media\Images\Icons\Files\inkenginesettings.svg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Media\Images\Icons\Files\streamingblock.svg">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Views\Shell\TaskBarIcon.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
@@ -1656,6 +1665,7 @@
     <None Remove="Resources\Media\Images\Icons\Files\bk2.bmp" />
     <None Remove="Resources\Media\Images\Icons\Files\bnk.bmp" />
     <None Remove="Resources\Media\Images\Icons\Files\buffer.svg" />
+    <None Remove="Resources\Media\Images\Icons\Files\ccstate.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\cellmap.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\cminimapedit.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\community.svg" />
@@ -1687,6 +1697,7 @@
     <None Remove="Resources\Media\Images\Icons\Files\hitrepresentation.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\hud.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\ies.svg" />
+    <None Remove="Resources\Media\Images\Icons\Files\inkenginesettings.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\joke.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\json2.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\lane_spots.svg" />
@@ -1732,6 +1743,7 @@
     <None Remove="Resources\Media\Images\Icons\Files\spatial_representation.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\Spawntree.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\srt.svg" />
+    <None Remove="Resources\Media\Images\Icons\Files\streamingblock.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\streamingquerydata.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\streamingsector.svg" />
     <None Remove="Resources\Media\Images\Icons\Files\streamingsector_inplace.svg" />
