--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -65,9 +65,11 @@
     <None Remove="Resources\missinghashes.txt" />
     <None Remove="Resources\red.kark" />
     <None Remove="Resources\tweakdbstr.kark" />
+    <None Remove="Resources\tweakdbstr_add.kark" />
     <None Remove="Resources\unusedhashes.kark" />
     <EmbeddedResource Include="Resources\missinghashes.txt" />
     <EmbeddedResource Include="Resources\tweakdbstr.kark" />
+    <EmbeddedResource Include="Resources\tweakdbstr_add.kark" />
     <EmbeddedResource Include="Resources\unusedhashes.kark" />
     <None Remove="Resources\usedhashes.kark" />
     <EmbeddedResource Include="Resources\usedhashes.kark" />
