Fix Merge Issues

--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -70,6 +70,8 @@
     <None Remove="Resources\usedhashes.kark" />
     <EmbeddedResource Include="Resources\missinghashes.txt" />
     <EmbeddedResource Include="Resources\usedhashes.kark" />
+    <EmbeddedResource Include="Resources\tweakdbstr.kark" />
+    <EmbeddedResource Include="Resources\tweakdbstr_add.kark" />
   </ItemGroup>
 
   <ItemGroup>
