--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -1,9 +1,9 @@
 name: wkit-check-builds
 on:
   push:
-    branches: '*'
+    branches: [develop, master, main]
   pull_request:
-    branches: '*'
+    branches: [develop, master, main]
 
 jobs:
   desktop-win:
