--- a/WolvenKit.Core/WolvenKit.Core.csproj
+++ b/WolvenKit.Core/WolvenKit.Core.csproj
@@ -19,7 +19,6 @@
       <Platforms>x64</Platforms>
       <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-
   </PropertyGroup>
 
     <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
@@ -31,25 +30,26 @@
     <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('OSX'))">
         <DefineConstants>_OSX</DefineConstants>
     </PropertyGroup>
-    
+
   <ItemGroup>
     <None Remove="lib\kraken.dll" />
     <None Remove="lib\libooz.so" />
+    <None Remove="lib\libkraken.dylib" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="lib\kraken.dll">
-      <PackagePath>lib\net5.0</PackagePath>
+    <ContentWithTargetPath Include="lib\kraken.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <Pack>true</Pack>
-    </Content>
-    <None Remove="lib\libkraken.dylib" />
-    <Content Include="lib\libkraken.dylib">
+      <TargetPath>libkraken.dll</TargetPath>
+    </ContentWithTargetPath>
+    <ContentWithTargetPath Include="lib\libooz.so">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="lib\libooz.so">
+      <TargetPath>libooz.so</TargetPath>
+    </ContentWithTargetPath>
+    <ContentWithTargetPath Include="lib\libkraken.dylib">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+      <TargetPath>libkraken.dylib</TargetPath>
+    </ContentWithTargetPath>
   </ItemGroup>
 
     <ItemGroup>
