--- a/Tests/WolvenKit.FunctionalTests/WolvenKit.FunctionalTests.csproj
+++ b/Tests/WolvenKit.FunctionalTests/WolvenKit.FunctionalTests.csproj
@@ -33,6 +33,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.1.45" />
       <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
 
