Update funding details and add Open Collective

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,7 @@
 # These are supported funding model platforms
 # We also welcome written motivational letters for our devs :D anyway thanks to anyone supporting this project in advance <3
 
-patreon: traderain
+patreon: redmoddingtools
+open_collective: redmodding
 ko_fi: traderain
 custom: ['http://paypal.me/traderain']
