--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -72,6 +72,7 @@
 
   <ItemGroup>
     <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="6.0.4" />
+    <PackageReference Include="AutomaticGraphLayout" Version="1.1.12" />
     <PackageReference Include="AvalonEdit" Version="6.1.3.50" />
     <PackageReference Include="HelixToolkit.SharpDX.Assimp" Version="2.20.2" />
     <PackageReference Include="HelixToolkit.SharpDX.Core.Wpf" Version="2.20.2" />
