--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -63,12 +63,14 @@
     <None Remove="lib\vgmstream\test.exe" />
     <None Remove="lib\vgmstream\xmp-vgmstream.dll" />
     <None Remove="Resources\missinghashes.txt" />
+    <None Remove="Resources\noderefs.kark" />
     <None Remove="Resources\red.kark" />
     <None Remove="Resources\tweakdbstr.kark" />
     <None Remove="Resources\tweakdbstr_add.kark" />
     <None Remove="Resources\unusedhashes.kark" />
     <None Remove="Resources\usedhashes.kark" />
     <EmbeddedResource Include="Resources\missinghashes.txt" />
+    <EmbeddedResource Include="Resources\noderefs.kark" />
     <EmbeddedResource Include="Resources\usedhashes.kark" />
     <EmbeddedResource Include="Resources\tweakdbstr.kark" />
     <EmbeddedResource Include="Resources\tweakdbstr_add.kark" />
