--- a/.github/workflows/check-only.yml
+++ b/.github/workflows/check-only.yml
@@ -2,10 +2,12 @@ name: check-only
 on:
   pull_request:
     branches: [develop, master, main]
+  push:
+    branches: [develop]
 
 jobs:
   desktop-win:
-    runs-on: windows-2022
+    runs-on: windows-latest
 
     steps:
     - name: Checkout
@@ -15,23 +17,10 @@ jobs:
       with:
         dotnet-version: 6.x
 
-    - name: Publish with Dotnet
-      run: dotnet publish .\WolvenKit\WolvenKit.csproj -o .\publish -c Release
-
-  console-win:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 6.x
-
-    - name: Publish with Dotnet
-      run: dotnet publish ./WolvenKit.CLI/WolvenKit.CLI.csproj -o ./publish_cli -r win-x64 -c Release --no-self-contained
-
+    - name: Restore dependencies
+      run: dotnet restore .\All.sln
+    - name: Build
+      run: dotnet build .\All.sln --no-restore
 
   console-linux:
     runs-on: ubuntu-latest
@@ -44,5 +33,7 @@ jobs:
       with:
         dotnet-version: 6.x
 
-    - name: Publish with Dotnet
-      run: dotnet publish ./WolvenKit.CLI/WolvenKit.CLI.csproj -o ./publish_cli_linux -r linux-x64 -c Release --no-self-contained
+    - name: Restore dependencies
+      run: dotnet restore ./WolvenKit.CLI/WolvenKit.CLI.csproj
+    - name: Build
+      run: dotnet build ./WolvenKit.CLI/WolvenKit.CLI.csproj --no-restore
