Added more writers

--- a/CyberCAT.Debug/CyberCAT.Debug.csproj
+++ b/CyberCAT.Debug/CyberCAT.Debug.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
     <ProjectReference Include="..\WolvenKit.RED4.Save\WolvenKit.RED4.Save.csproj" />
   </ItemGroup>
 
